--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qt6webengine
-url = https://download.qt.io/official_releases/qt/6.7/6.7.0/submodules/qtwebengine-everywhere-src-6.7.0.tar.xz
+url = https://download.qt.io/official_releases/qt/6.7/6.7.1/submodules/qtwebengine-everywhere-src-6.7.1.tar.xz
 archives = 
 giturl = 
 domain = 
@@ -20,7 +20,7 @@ autoupdate = true
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
-broken_parallel_build = false
+broken_parallel_build = true
 # create vendor archive with cargo
 cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
@@ -71,6 +71,8 @@ use_avx512 = false
 use_clang = false
 # configure build for lto
 use_lto = true
+# use ninja build files
+use_ninja = true
 # require package verification for build
 verify_required = false
 
