--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = qt6webengine
-url = https://download.qt.io/official_releases/qt/6.7/6.7.1/submodules/qtwebengine-everywhere-src-6.7.1.tar.xz
+url = https://download.qt.io/official_releases/qt/6.7/6.7.3/submodules/qtwebengine-everywhere-src-6.7.3.tar.xz
 archives = 
 giturl = 
 domain = 
@@ -16,7 +16,9 @@ allow_test_failures = false
 # unset %build ld_as_needed variable
 asneeded = false
 # this package is trusted enough to automatically update (used by other tools)
-autoupdate = true
+autoupdate = false
+# try to use mock short circuit to avoid full rebuilds
+avoid_rebuild = false
 # extend flags with '-std=gnu++98
 broken_c++ = false
 # disable parallelization during build
